--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -33,52 +33,43 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "XxJvrwYBAdkf"
-      },
-      "id": "XxJvrwYBAdkf"
-    },
-    {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "502e1d87-2fdd-4588-a330-2af21268215e",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "502e1d87-2fdd-4588-a330-2af21268215e",
-        "outputId": "acdbd8e0-b7c5-40e6-d354-bcd0d69b6f3b"
+        "id": "502e1d87-2fdd-4588-a330-2af21268215e"
       },
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "int"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 4
-        }
-      ],
+      "outputs": [],
       "source": [
-        "# Write a Python program to declare a variable x with the value 10 and print its type.\n",
-        "x=10\n",
-        "type(x)"
+        "# Write a Python program to declare a variable x with the value 10 and print its type."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "id": "dae77579-4b7d-4f06-96e0-7bdfe43860d7",
       "metadata": {
-        "id": "dae77579-4b7d-4f06-96e0-7bdfe43860d7"
+        "id": "dae77579-4b7d-4f06-96e0-7bdfe43860d7",
+        "outputId": "a4c01bc7-6e60-4ce2-c90b-5611f392221b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "30\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to declare three variables a = 5, b = 10, and c = 15, and print their sum."
+        "# Write a Python program to declare three variables a = 5, b = 10, and c = 15, and print their sum.\n",
+        "a=5\n",
+        "b=10\n",
+        "c=15\n",
+        "print(a+b+c)"
       ]
     },
     {
@@ -292,7 +283,7 @@
       },
       "outputs": [],
       "source": [
-        "# Write a Python program to check if a number is divisible by both 3 and 5. (User input for the number)"
+        "# Write a Python program to check if a number is divisible by both 3 and 5. (User input fo gar the number)"
       ]
     },
     {
