--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -34,42 +34,43 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "502e1d87-2fdd-4588-a330-2af21268215e",
       "metadata": {
-        "id": "502e1d87-2fdd-4588-a330-2af21268215e"
-      },
-      "outputs": [],
-      "source": [
-        "# Write a Python program to declare a variable x with the value 10 and print its type."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 5,
-      "id": "dae77579-4b7d-4f06-96e0-7bdfe43860d7",
-      "metadata": {
-        "id": "dae77579-4b7d-4f06-96e0-7bdfe43860d7",
-        "outputId": "a4c01bc7-6e60-4ce2-c90b-5611f392221b",
+        "id": "502e1d87-2fdd-4588-a330-2af21268215e",
+        "outputId": "f04e61c3-a966-4267-85ab-c4c2927b5835",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "30\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "int"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
         }
       ],
       "source": [
-        "# Write a Python program to declare three variables a = 5, b = 10, and c = 15, and print their sum.\n",
-        "a=5\n",
-        "b=10\n",
-        "c=15\n",
-        "print(a+b+c)"
+        "# Write a Python program to declare a variable x with the value 10 and print its type.\n",
+        "x=10\n",
+        "type(x)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "dae77579-4b7d-4f06-96e0-7bdfe43860d7",
+      "metadata": {
+        "id": "dae77579-4b7d-4f06-96e0-7bdfe43860d7"
+      },
+      "outputs": [],
+      "source": [
+        "# Write a Python program to declare three variables a = 5, b = 10, and c = 15, and print their sum."
       ]
     },
     {
@@ -283,7 +284,7 @@
       },
       "outputs": [],
       "source": [
-        "# Write a Python program to check if a number is divisible by both 3 and 5. (User input fo gar the number)"
+        "# Write a Python program to check if a number is divisible by both 3 and 5. (User input for the number)"
       ]
     },
     {
