--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -34,11 +34,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "502e1d87-2fdd-4588-a330-2af21268215e",
       "metadata": {
-        "id": "502e1d87-2fdd-4588-a330-2af21268215e",
-        "outputId": "f04e61c3-a966-4267-85ab-c4c2927b5835",
+        "id": "502e1d87-2fdd-4588-a330-2af21268215e"
+      },
+      "outputs": [],
+      "source": [
+        "# Write a Python program to declare a variable x with the value 10 and print its type."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "id": "dae77579-4b7d-4f06-96e0-7bdfe43860d7",
+      "metadata": {
+        "id": "dae77579-4b7d-4f06-96e0-7bdfe43860d7",
+        "outputId": "64bb73d3-96af-4b93-dd4c-5a7ee19e3570",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -48,29 +60,19 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "int"
+              "30"
             ]
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 2
         }
       ],
       "source": [
-        "# Write a Python program to declare a variable x with the value 10 and print its type.\n",
-        "x=10\n",
-        "type(x)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "dae77579-4b7d-4f06-96e0-7bdfe43860d7",
-      "metadata": {
-        "id": "dae77579-4b7d-4f06-96e0-7bdfe43860d7"
-      },
-      "outputs": [],
-      "source": [
-        "# Write a Python program to declare three variables a = 5, b = 10, and c = 15, and print their sum."
+        "# Write a Python program to declare three variables a = 5, b = 10, and c = 15, and print their sum.\n",
+        "a=5\n",
+        "b=10\n",
+        "c=15\n",
+        "(a+b+c)"
       ]
     },
     {
