--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -34,23 +34,40 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "502e1d87-2fdd-4588-a330-2af21268215e",
       "metadata": {
-        "id": "502e1d87-2fdd-4588-a330-2af21268215e"
+        "id": "502e1d87-2fdd-4588-a330-2af21268215e",
+        "outputId": "02e29bd4-bf99-4a70-9157-42a64844ca50",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "int"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ],
       "source": [
-        "# Write a Python program to declare a variable x with the value 10 and print its type."
+        "# Write a Python program to declare a variable x with the value 10 and print its type.\n",
+        "x=10\n",
+        "type(x)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 4,
       "id": "dae77579-4b7d-4f06-96e0-7bdfe43860d7",
       "metadata": {
         "id": "dae77579-4b7d-4f06-96e0-7bdfe43860d7",
-        "outputId": "64bb73d3-96af-4b93-dd4c-5a7ee19e3570",
+        "outputId": "52e5527a-9fbb-4c88-9c90-1618e6f2da71",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -64,7 +81,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 4
         }
       ],
       "source": [
@@ -77,86 +94,210 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "id": "c32867b2-a615-426a-89ae-bd2793b6a4dc",
       "metadata": {
-        "id": "c32867b2-a615-426a-89ae-bd2793b6a4dc"
+        "id": "c32867b2-a615-426a-89ae-bd2793b6a4dc",
+        "outputId": "6da07da0-6c71-4704-e223-8963536118fe",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "str"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ],
       "source": [
-        "# Write a Python program that checks and prints the type of a variable (e.g., int, float, str, etc.)."
+        "# Write a Python program that checks and prints the type of a variable (e.g., int, float, str, etc.).\n",
+        "name=\"ABHIGNA\"\n",
+        "type(name)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "id": "8b233e41-9d44-4869-9ead-afb3ff1c0b67",
       "metadata": {
-        "id": "8b233e41-9d44-4869-9ead-afb3ff1c0b67"
+        "id": "8b233e41-9d44-4869-9ead-afb3ff1c0b67",
+        "outputId": "dcdfab56-96de-488f-8a89-5c2a880db136",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "15\n",
+            "5\n",
+            "50\n",
+            "2.0\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to perform addition, subtraction, multiplication, and division on two numbers. (User input is required for the numbers)"
+        "# Write a Python program to perform addition, subtraction, multiplication, and division on two numbers. (User input is required for the numbers)\n",
+        "num1=10\n",
+        "num2=5\n",
+        "addition =num1+num2\n",
+        "subraction =num1-num2\n",
+        "multiplication =num1*num2\n",
+        "division =num1/num2\n",
+        "print(num1+num2)\n",
+        "print(num1-num2)\n",
+        "print(num1*num2)\n",
+        "print(num1/num2)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "id": "629435bd-6bfa-44de-91d9-3b2937713257",
       "metadata": {
-        "id": "629435bd-6bfa-44de-91d9-3b2937713257"
+        "id": "629435bd-6bfa-44de-91d9-3b2937713257",
+        "outputId": "1914e938-8d43-48ff-cc62-aa99d1dcbf5e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "123\n",
+            "123.0\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to convert a string \"123\" to an integer and a float and print the results."
+        "# Write a Python program to convert a string \"123\" to an integer and a float and print the results.\n",
+        "x=\"123\"\n",
+        "integer_value=int(x)\n",
+        "float_value=float(x)\n",
+        "print(integer_value)\n",
+        "print(float_value)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "id": "599421f1-51c1-4653-9d78-b007fcc6861b",
       "metadata": {
-        "id": "599421f1-51c1-4653-9d78-b007fcc6861b"
+        "id": "599421f1-51c1-4653-9d78-b007fcc6861b",
+        "outputId": "e66cb019-bdf6-4e17-b37d-8054ee339022",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "h\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to print the first character of a given string. (User input for the string)"
+        "# Write a Python program to print the first character of a given string. (User input for the string)\n",
+        "mystring=\"hello\"\n",
+        "print(mystring[0])"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "id": "54ee0a5d-415f-40b6-b82e-c0de12a002f9",
       "metadata": {
-        "id": "54ee0a5d-415f-40b6-b82e-c0de12a002f9"
+        "id": "54ee0a5d-415f-40b6-b82e-c0de12a002f9",
+        "outputId": "1d7e007e-7526-43a1-ee1d-a2a9d080693d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "7"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ],
       "source": [
-        "# Write a Python program to print the length of a string. (User input for the string)"
+        "# Write a Python program to print the length of a string. (User input for the string)\n",
+        "mystring=\"Abhigna\"\n",
+        "len(mystring)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "id": "65f44c33-618e-4337-a9d1-9de888c93a0a",
       "metadata": {
-        "id": "65f44c33-618e-4337-a9d1-9de888c93a0a"
+        "id": "65f44c33-618e-4337-a9d1-9de888c93a0a",
+        "outputId": "935d30d5-e60c-4b7b-9908-30a7f444b295",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ],
       "source": [
-        "# Write a Python program to check if a given string contains only alphabets."
+        "# Write a Python program to check if a given string contains only alphabets.\n",
+        "mystring=\"vyshnavi\"\n",
+        "str.isalpha(mystring)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "id": "37463128-2b51-4860-b6bf-40d3c03fbe84",
       "metadata": {
-        "id": "37463128-2b51-4860-b6bf-40d3c03fbe84"
+        "id": "37463128-2b51-4860-b6bf-40d3c03fbe84",
+        "outputId": "7be521b3-9ce0-4794-dc0f-c429cdc55f2b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "helloworld\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to concatenate two strings. (User input for the strings)"
+        "# Write a Python program to concatenate two strings. (User input for the strings)\n",
+        "s1=\"hello\"\n",
+        "s2=\"world\"\n",
+        "s3=s1+\"\"+s2\n",
+        "print(s3)"
       ]
     },
     {
@@ -168,7 +309,7 @@
       },
       "outputs": [],
       "source": [
-        "# Write a Python program to find the index of a substring \"abc\" in a string. (User input for the string)"
+        "# Write a Python program to find the index of a substring \"abc\" in a string. (User input for the string)\n"
       ]
     },
     {
