--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Abhigna8/rishi-college/blob/main/assignments/Assignment_01.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "548b84c2-e24f-4a12-98bb-5e7bd5ec86bd",
       "metadata": {
         "id": "548b84c2-e24f-4a12-98bb-5e7bd5ec86bd"
@@ -34,251 +44,119 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "502e1d87-2fdd-4588-a330-2af21268215e",
       "metadata": {
-        "id": "502e1d87-2fdd-4588-a330-2af21268215e",
-        "outputId": "02e29bd4-bf99-4a70-9157-42a64844ca50",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "502e1d87-2fdd-4588-a330-2af21268215e"
       },
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "int"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 3
-        }
-      ],
+      "outputs": [],
       "source": [
-        "# Write a Python program to declare a variable x with the value 10 and print its type.\n",
-        "x=10\n",
-        "type(x)"
+        "# Write a Python program to declare a variable x with the value 10 and print its type."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "dae77579-4b7d-4f06-96e0-7bdfe43860d7",
       "metadata": {
-        "id": "dae77579-4b7d-4f06-96e0-7bdfe43860d7",
-        "outputId": "52e5527a-9fbb-4c88-9c90-1618e6f2da71",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "dae77579-4b7d-4f06-96e0-7bdfe43860d7"
       },
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "30"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 4
-        }
-      ],
+      "outputs": [],
       "source": [
-        "# Write a Python program to declare three variables a = 5, b = 10, and c = 15, and print their sum.\n",
-        "a=5\n",
-        "b=10\n",
-        "c=15\n",
-        "(a+b+c)"
+        "# Write a Python program to declare three variables a = 5, b = 10, and c = 15, and print their sum."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "c32867b2-a615-426a-89ae-bd2793b6a4dc",
       "metadata": {
-        "id": "c32867b2-a615-426a-89ae-bd2793b6a4dc",
-        "outputId": "6da07da0-6c71-4704-e223-8963536118fe",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "c32867b2-a615-426a-89ae-bd2793b6a4dc"
       },
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "str"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 5
-        }
-      ],
+      "outputs": [],
       "source": [
-        "# Write a Python program that checks and prints the type of a variable (e.g., int, float, str, etc.).\n",
-        "name=\"ABHIGNA\"\n",
-        "type(name)"
+        "# Write a Python program that checks and prints the type of a variable (e.g., int, float, str, etc.)."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "8b233e41-9d44-4869-9ead-afb3ff1c0b67",
       "metadata": {
-        "id": "8b233e41-9d44-4869-9ead-afb3ff1c0b67",
-        "outputId": "dcdfab56-96de-488f-8a89-5c2a880db136",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "8b233e41-9d44-4869-9ead-afb3ff1c0b67"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "15\n",
-            "5\n",
-            "50\n",
-            "2.0\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "# Write a Python program to perform addition, subtraction, multiplication, and division on two numbers. (User input is required for the numbers)\n",
-        "num1=10\n",
-        "num2=5\n",
-        "addition =num1+num2\n",
-        "subraction =num1-num2\n",
-        "multiplication =num1*num2\n",
-        "division =num1/num2\n",
-        "print(num1+num2)\n",
-        "print(num1-num2)\n",
-        "print(num1*num2)\n",
-        "print(num1/num2)"
+        "# Write a Python program to perform addition, subtraction, multiplication, and division on two numbers. (User input is required for the numbers)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "id": "629435bd-6bfa-44de-91d9-3b2937713257",
       "metadata": {
-        "id": "629435bd-6bfa-44de-91d9-3b2937713257",
-        "outputId": "1914e938-8d43-48ff-cc62-aa99d1dcbf5e",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "629435bd-6bfa-44de-91d9-3b2937713257"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "123\n",
-            "123.0\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "# Write a Python program to convert a string \"123\" to an integer and a float and print the results.\n",
-        "x=\"123\"\n",
-        "integer_value=int(x)\n",
-        "float_value=float(x)\n",
-        "print(integer_value)\n",
-        "print(float_value)"
+        "# Write a Python program to convert a string \"123\" to an integer and a float and print the results."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "id": "599421f1-51c1-4653-9d78-b007fcc6861b",
       "metadata": {
-        "id": "599421f1-51c1-4653-9d78-b007fcc6861b",
-        "outputId": "e66cb019-bdf6-4e17-b37d-8054ee339022",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "599421f1-51c1-4653-9d78-b007fcc6861b"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "h\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "# Write a Python program to print the first character of a given string. (User input for the string)\n",
-        "mystring=\"hello\"\n",
-        "print(mystring[0])"
+        "# Write a Python program to print the first character of a given string. (User input for the string)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "54ee0a5d-415f-40b6-b82e-c0de12a002f9",
+      "metadata": {
+        "id": "54ee0a5d-415f-40b6-b82e-c0de12a002f9"
+      },
+      "outputs": [],
+      "source": [
+        "# Write a Python program to print the length of a string. (User input for the string)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "65f44c33-618e-4337-a9d1-9de888c93a0a",
+      "metadata": {
+        "id": "65f44c33-618e-4337-a9d1-9de888c93a0a"
+      },
+      "outputs": [],
+      "source": [
+        "# Write a Python program to check if a given string contains only alphabets."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "37463128-2b51-4860-b6bf-40d3c03fbe84",
+      "metadata": {
+        "id": "37463128-2b51-4860-b6bf-40d3c03fbe84"
+      },
+      "outputs": [],
+      "source": [
+        "# Write a Python program to concatenate two strings. (User input for the strings)"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": 23,
-      "id": "54ee0a5d-415f-40b6-b82e-c0de12a002f9",
+      "id": "b1c5d364-eccf-473a-b03a-ab15f3e917cf",
       "metadata": {
-        "id": "54ee0a5d-415f-40b6-b82e-c0de12a002f9",
-        "outputId": "1d7e007e-7526-43a1-ee1d-a2a9d080693d",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "7"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 23
-        }
-      ],
-      "source": [
-        "# Write a Python program to print the length of a string. (User input for the string)\n",
-        "mystring=\"Abhigna\"\n",
-        "len(mystring)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 25,
-      "id": "65f44c33-618e-4337-a9d1-9de888c93a0a",
-      "metadata": {
-        "id": "65f44c33-618e-4337-a9d1-9de888c93a0a",
-        "outputId": "935d30d5-e60c-4b7b-9908-30a7f444b295",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 25
-        }
-      ],
-      "source": [
-        "# Write a Python program to check if a given string contains only alphabets.\n",
-        "mystring=\"vyshnavi\"\n",
-        "str.isalpha(mystring)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 26,
-      "id": "37463128-2b51-4860-b6bf-40d3c03fbe84",
-      "metadata": {
-        "id": "37463128-2b51-4860-b6bf-40d3c03fbe84",
-        "outputId": "7be521b3-9ce0-4794-dc0f-c429cdc55f2b",
+        "id": "b1c5d364-eccf-473a-b03a-ab15f3e917cf",
+        "outputId": "7e14285a-2d6d-453a-bcb4-c4f6d32a4906",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -288,88 +166,155 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "helloworld\n"
+            "0\n"
           ]
         }
       ],
       "source": [
-        "# Write a Python program to concatenate two strings. (User input for the strings)\n",
-        "s1=\"hello\"\n",
-        "s2=\"world\"\n",
-        "s3=s1+\"\"+s2\n",
-        "print(s3)"
+        "# Write a Python program to find the index of a substring \"abc\" in a string. (User input for the string)\n",
+        "s=\"abcdef\"\n",
+        "print(s.index(\"abc\"))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "id": "b1c5d364-eccf-473a-b03a-ab15f3e917cf",
-      "metadata": {
-        "id": "b1c5d364-eccf-473a-b03a-ab15f3e917cf"
-      },
-      "outputs": [],
-      "source": [
-        "# Write a Python program to find the index of a substring \"abc\" in a string. (User input for the string)\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "id": "cc92afd9-ba4b-4934-a79d-f26825b4efc2",
       "metadata": {
-        "id": "cc92afd9-ba4b-4934-a79d-f26825b4efc2"
+        "id": "cc92afd9-ba4b-4934-a79d-f26825b4efc2",
+        "outputId": "6a7c8d58-6ac8-45f9-c62a-c16621ca0ea9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hello abhigna\n",
+            "HELLO ABHIGNA\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to convert a string to both uppercase and lowercase. (User input for the string)"
+        "# Write a Python program to convert a string to both uppercase and lowercase. (User input for the string)\n",
+        "name=(\"Hello Abhigna\")\n",
+        "print(name.lower())\n",
+        "print(name.upper())"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "id": "f24f79b3-da8b-44bf-8310-c68442e86e3e",
       "metadata": {
-        "id": "f24f79b3-da8b-44bf-8310-c68442e86e3e"
+        "id": "f24f79b3-da8b-44bf-8310-c68442e86e3e",
+        "outputId": "a9b18df8-e7ee-490c-c114-7f19f38185d5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "the count from letter a: 3\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to count how many times a particular character appears in a string. (User input for string and character)"
+        "# Write a Python program to count how many times a particular character appears in a string. (User input for string and character)\n",
+        "string=\"banana\"\n",
+        "c=string.count('a',1)\n",
+        "print('the count from letter a:',c)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "id": "f2e8f25c-5c34-44eb-b749-7cc4c100b9a8",
       "metadata": {
-        "id": "f2e8f25c-5c34-44eb-b749-7cc4c100b9a8"
+        "id": "f2e8f25c-5c34-44eb-b749-7cc4c100b9a8",
+        "outputId": "2e9a27bd-9659-4fd8-82f7-1a5276f983b1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hello,whats your name?abhi\n",
+            "helloabhigood morning\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to take the user's name as input and print a personalized greeting. (Hello, username, Good Morning)"
+        "# Write a Python program to take the user's name as input and print a personalized greeting. (Hello, username, Good Morning)\n",
+        "name=input(\"hello,whats your name?\")\n",
+        "print(\"hello\"+name+\"good morning\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "id": "189296cf-77e6-4f48-b010-77458da5bc9d",
       "metadata": {
-        "id": "189296cf-77e6-4f48-b010-77458da5bc9d"
+        "id": "189296cf-77e6-4f48-b010-77458da5bc9d",
+        "outputId": "366a9ba7-0496-437e-8ae8-80eac866e28f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "15"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ],
       "source": [
-        "# Write a Python program to take two numbers as input and print their sum."
+        "# Write a Python program to take two numbers as input and print their sum.\n",
+        "a=5\n",
+        "b=10\n",
+        "a+b"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "id": "0563b26c-0218-47b8-9035-98beb73b0931",
       "metadata": {
-        "id": "0563b26c-0218-47b8-9035-98beb73b0931"
+        "id": "0563b26c-0218-47b8-9035-98beb73b0931",
+        "outputId": "70ee2ccc-20f9-4262-fde9-64479fef0207",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter name:abhi\n",
+            "age:20\n",
+            "{'abhi'} {'20'}\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to format and display a string containing the user's name and age. (User input required)"
+        "# Write a Python program to format and display a string containing the user's name and age. (User input required)\n",
+        "name=input(\"enter name:\")\n",
+        "age=input(\"age:\")\n",
+        "print({name},{age})\n"
       ]
     },
     {
@@ -1154,7 +1099,8 @@
       "version": "3.12.6"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
