--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -44,7 +44,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "id": "502e1d87-2fdd-4588-a330-2af21268215e",
       "metadata": {
         "id": "502e1d87-2fdd-4588-a330-2af21268215e",
@@ -73,7 +73,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "id": "dae77579-4b7d-4f06-96e0-7bdfe43860d7",
       "metadata": {
         "id": "dae77579-4b7d-4f06-96e0-7bdfe43860d7",
@@ -104,7 +104,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "id": "c32867b2-a615-426a-89ae-bd2793b6a4dc",
       "metadata": {
         "id": "c32867b2-a615-426a-89ae-bd2793b6a4dc",
@@ -133,7 +133,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "id": "8b233e41-9d44-4869-9ead-afb3ff1c0b67",
       "metadata": {
         "id": "8b233e41-9d44-4869-9ead-afb3ff1c0b67",
@@ -166,7 +166,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "id": "629435bd-6bfa-44de-91d9-3b2937713257",
       "metadata": {
         "id": "629435bd-6bfa-44de-91d9-3b2937713257",
@@ -196,7 +196,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "id": "599421f1-51c1-4653-9d78-b007fcc6861b",
       "metadata": {
         "id": "599421f1-51c1-4653-9d78-b007fcc6861b",
@@ -222,7 +222,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "id": "54ee0a5d-415f-40b6-b82e-c0de12a002f9",
       "metadata": {
         "id": "54ee0a5d-415f-40b6-b82e-c0de12a002f9",
@@ -251,7 +251,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "id": "65f44c33-618e-4337-a9d1-9de888c93a0a",
       "metadata": {
         "id": "65f44c33-618e-4337-a9d1-9de888c93a0a",
@@ -280,7 +280,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "id": "37463128-2b51-4860-b6bf-40d3c03fbe84",
       "metadata": {
         "id": "37463128-2b51-4860-b6bf-40d3c03fbe84",
@@ -308,74 +308,169 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "b1c5d364-eccf-473a-b03a-ab15f3e917cf",
       "metadata": {
-        "id": "b1c5d364-eccf-473a-b03a-ab15f3e917cf"
+        "id": "b1c5d364-eccf-473a-b03a-ab15f3e917cf",
+        "outputId": "2d9ee845-c90d-4dac-d108-d8d6122b2954",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to find the index of a substring \"abc\" in a string. (User input for the string)"
+        "# Write a Python program to find the index of a substring \"abc\" in a string. (User input for the string)\n",
+        "s=\"abcdef\"\n",
+        "print(s.index(\"abc\"))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "id": "cc92afd9-ba4b-4934-a79d-f26825b4efc2",
       "metadata": {
-        "id": "cc92afd9-ba4b-4934-a79d-f26825b4efc2"
+        "id": "cc92afd9-ba4b-4934-a79d-f26825b4efc2",
+        "outputId": "500594ef-04b1-4803-c7e9-e9edbe65289b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hello abhigna\n",
+            "HELLO ABHIGNA\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to convert a string to both uppercase and lowercase. (User input for the string)"
+        "# Write a Python program to convert a string to both uppercase and lowercase. (User input for the string)\n",
+        "name=(\"Hello Abhigna\")\n",
+        "print(name.lower())\n",
+        "print(name.upper())"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "f24f79b3-da8b-44bf-8310-c68442e86e3e",
       "metadata": {
-        "id": "f24f79b3-da8b-44bf-8310-c68442e86e3e"
+        "id": "f24f79b3-da8b-44bf-8310-c68442e86e3e",
+        "outputId": "0248da97-2f75-4a31-bf89-1c4551493c8b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "the count from letter a: 3\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to count how many times a particular character appears in a string. (User input for string and character)"
+        "# Write a Python program to count how many times a particular character appears in a string. (User input for string and character)\n",
+        "string=\"banana\"\n",
+        "c=string.count('a',1)\n",
+        "print('the count from letter a:',c)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "id": "f2e8f25c-5c34-44eb-b749-7cc4c100b9a8",
       "metadata": {
-        "id": "f2e8f25c-5c34-44eb-b749-7cc4c100b9a8"
+        "id": "f2e8f25c-5c34-44eb-b749-7cc4c100b9a8",
+        "outputId": "243f72a7-c61c-416e-e509-1838946d32f0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hello,whats your name?abhi\n",
+            "helloabhigood morning\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to take the user's name as input and print a personalized greeting. (Hello, username, Good Morning)"
+        "# Write a Python program to take the user's name as input and print a personalized greeting. (Hello, username, Good Morning)\n",
+        "name=input(\"hello,whats your name?\")\n",
+        "print(\"hello\"+name+\"good morning\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "id": "189296cf-77e6-4f48-b010-77458da5bc9d",
       "metadata": {
-        "id": "189296cf-77e6-4f48-b010-77458da5bc9d"
+        "id": "189296cf-77e6-4f48-b010-77458da5bc9d",
+        "outputId": "f2b14afa-d560-4f72-a423-548b9ddcf385",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "15"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ],
       "source": [
-        "# Write a Python program to take two numbers as input and print their sum."
+        "# Write a Python program to take two numbers as input and print their sum.\n",
+        "a=5\n",
+        "b=10\n",
+        "a+b"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "id": "0563b26c-0218-47b8-9035-98beb73b0931",
       "metadata": {
-        "id": "0563b26c-0218-47b8-9035-98beb73b0931"
+        "id": "0563b26c-0218-47b8-9035-98beb73b0931",
+        "outputId": "9c741db3-8af8-4382-dec0-d212a14a9b99",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter name:abhi\n",
+            "age:20\n",
+            "{'abhi'} {'20'}\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to format and display a string containing the user's name and age. (User input required)"
+        "# Write a Python program to format and display a string containing the user's name and age. (User input required)\n",
+        "name=input(\"enter name:\")\n",
+        "age=input(\"age:\")\n",
+        "print({name},{age})"
       ]
     },
     {
