--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -308,7 +308,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "b1c5d364-eccf-473a-b03a-ab15f3e917cf",
       "metadata": {
         "id": "b1c5d364-eccf-473a-b03a-ab15f3e917cf",
@@ -334,7 +334,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "cc92afd9-ba4b-4934-a79d-f26825b4efc2",
       "metadata": {
         "id": "cc92afd9-ba4b-4934-a79d-f26825b4efc2",
@@ -362,7 +362,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "f24f79b3-da8b-44bf-8310-c68442e86e3e",
       "metadata": {
         "id": "f24f79b3-da8b-44bf-8310-c68442e86e3e",
@@ -389,7 +389,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "f2e8f25c-5c34-44eb-b749-7cc4c100b9a8",
       "metadata": {
         "id": "f2e8f25c-5c34-44eb-b749-7cc4c100b9a8",
@@ -416,7 +416,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "189296cf-77e6-4f48-b010-77458da5bc9d",
       "metadata": {
         "id": "189296cf-77e6-4f48-b010-77458da5bc9d",
@@ -446,7 +446,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "0563b26c-0218-47b8-9035-98beb73b0931",
       "metadata": {
         "id": "0563b26c-0218-47b8-9035-98beb73b0931",
@@ -485,62 +485,171 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "id": "aefff5f3-b61e-43e6-a458-7367ef1af9de",
       "metadata": {
-        "id": "aefff5f3-b61e-43e6-a458-7367ef1af9de"
+        "id": "aefff5f3-b61e-43e6-a458-7367ef1af9de",
+        "outputId": "6ead6f40-8f5d-4aa6-f600-90897074f3b4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter a number:10\n",
+            "positive number\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program that takes a number as input and checks whether it is positive, negative, or zero."
+        "# Write a Python program that takes a number as input and checks whether it is positive, negative, or zero.\n",
+        "num=float(input(\"enter a number:\"))\n",
+        "if num>0:\n",
+        "  print(\"positive number\")\n",
+        "elif num == 0:\n",
+        "      print(\"zero\")\n",
+        "else:\n",
+        "      print(\"negative number\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 44,
       "id": "4dc6d14b-6d22-4348-859a-2a03f9be65f7",
       "metadata": {
-        "id": "4dc6d14b-6d22-4348-859a-2a03f9be65f7"
+        "id": "4dc6d14b-6d22-4348-859a-2a03f9be65f7",
+        "outputId": "4a65de87-ccfe-4094-8bf4-f50ab3cd58ec",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "14\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to find the maximum of three numbers. (User input for the numbers)"
+        "# Write a Python program to find the maximum of three numbers. (User input for the numbers)\n",
+        "def maximum(a, b, c):\n",
+        "\n",
+        "    if (a >= b) and (a >= c):\n",
+        "        largest = a\n",
+        "\n",
+        "    elif (b >= a) and (b >= c):\n",
+        "        largest = b\n",
+        "    else:\n",
+        "        largest = c\n",
+        "\n",
+        "    return largest\n",
+        "\n",
+        "\n",
+        "# Driven code\n",
+        "a = 10\n",
+        "b = 14\n",
+        "c = 12\n",
+        "print(maximum(a, b, c))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 36,
       "id": "3f6d1f45-eb68-4142-89d6-510046f21879",
       "metadata": {
-        "id": "3f6d1f45-eb68-4142-89d6-510046f21879"
+        "id": "3f6d1f45-eb68-4142-89d6-510046f21879",
+        "outputId": "5044d517-d907-49c0-deee-440bac4a70ad",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the year to be checked:2004\n",
+            "the year is a leap year\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to check if a year is a leap year. (User input for the year)"
+        "# Write a Python program to check if a year is a leap year. (User input for the year)\n",
+        "year=int(input(\"enter the year to be checked:\"))\n",
+        "if(year%4==0 and year%100!=0 or year%400==0):\n",
+        "   print(\"the year is a leap year\")\n",
+        "else:\n",
+        "   print(\"the year isnt a leap year\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 47,
       "id": "b6a07105-6fa5-4f70-b64b-ebd66afc3c2b",
       "metadata": {
-        "id": "b6a07105-6fa5-4f70-b64b-ebd66afc3c2b"
+        "id": "b6a07105-6fa5-4f70-b64b-ebd66afc3c2b",
+        "outputId": "b66189cd-1fb1-4a5c-e6b5-bcb866c3ad71",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "15\n",
+            "divisible by 3 and 5\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to check if a number is divisible by both 3 and 5. (User input for the number)"
+        "# Write a Python program to check if a number is divisible by both 3 and 5. (User input for the number)\n",
+        "num = int(input())\n",
+        "if num % 3 ==0 and num%5==0:\n",
+        "  print(\"divisible by 3 and 5\")\n",
+        "else:\n",
+        "  print(\"Not divisible by 3 and 5\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 48,
       "id": "d10c9005-b85d-42f9-81d0-65d149415888",
       "metadata": {
-        "id": "d10c9005-b85d-42f9-81d0-65d149415888"
+        "id": "d10c9005-b85d-42f9-81d0-65d149415888",
+        "outputId": "6983610e-39d2-44b1-df64-f3f3994584eb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Yes\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to check if a string is a palindrome. (User input for the string)"
+        "# Write a Python program to check if a string is a palindrome. (User input for the string)\n",
+        "def isPalindrome(s):\n",
+        "    return s == s[::-1]\n",
+        "\n",
+        "\n",
+        "# Driver code\n",
+        "s = \"malayalam\"\n",
+        "ans = isPalindrome(s)\n",
+        "if ans:\n",
+        "    print(\"Yes\")\n",
+        "else:\n",
+        "    print(\"No\")"
       ]
     },
     {
@@ -552,7 +661,7 @@
       },
       "outputs": [],
       "source": [
-        "# Write a Python program to print numbers from 1 to 10 using a for loop."
+        "# Write a Python program to print numbers from 1 to 10 using a for loop.\n"
       ]
     },
     {
