--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -485,7 +485,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "id": "aefff5f3-b61e-43e6-a458-7367ef1af9de",
       "metadata": {
         "id": "aefff5f3-b61e-43e6-a458-7367ef1af9de",
@@ -517,7 +517,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": null,
       "id": "4dc6d14b-6d22-4348-859a-2a03f9be65f7",
       "metadata": {
         "id": "4dc6d14b-6d22-4348-859a-2a03f9be65f7",
@@ -559,7 +559,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "id": "3f6d1f45-eb68-4142-89d6-510046f21879",
       "metadata": {
         "id": "3f6d1f45-eb68-4142-89d6-510046f21879",
@@ -589,7 +589,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": null,
       "id": "b6a07105-6fa5-4f70-b64b-ebd66afc3c2b",
       "metadata": {
         "id": "b6a07105-6fa5-4f70-b64b-ebd66afc3c2b",
@@ -619,7 +619,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": null,
       "id": "d10c9005-b85d-42f9-81d0-65d149415888",
       "metadata": {
         "id": "d10c9005-b85d-42f9-81d0-65d149415888",
@@ -654,63 +654,206 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "82d76cdf-efc6-45c6-ab09-9d1f17b3d857",
       "metadata": {
-        "id": "82d76cdf-efc6-45c6-ab09-9d1f17b3d857"
+        "id": "82d76cdf-efc6-45c6-ab09-9d1f17b3d857",
+        "outputId": "6f6b7b84-81d8-4b42-abb0-aa70df99fde1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n",
+            "7\n",
+            "8\n",
+            "9\n",
+            "10\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to print numbers from 1 to 10 using a for loop.\n"
+        "# Write a Python program to print numbers from 1 to 10 using a for loop.\n",
+        "for i in range(1,11):\n",
+        "  print(i)\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "id": "d09e8994-e984-4c12-ab1e-1bfc6938a389",
       "metadata": {
-        "id": "d09e8994-e984-4c12-ab1e-1bfc6938a389"
+        "id": "d09e8994-e984-4c12-ab1e-1bfc6938a389",
+        "outputId": "2909d85b-893d-457b-bffc-0e0565eee870",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "2\n",
+            "4\n",
+            "6\n",
+            "8\n",
+            "10\n",
+            "12\n",
+            "14\n",
+            "16\n",
+            "18\n",
+            "20\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to print all even numbers from 1 to 20 using a while loop."
+        "# Write a Python program to print all even numbers from 1 to 20 using a while loop.\n",
+        "i=0\n",
+        "while i<=20:\n",
+        "   print(i)\n",
+        "   i+=2"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "id": "c09ca878-167e-49ca-97f0-247a43c9b472",
       "metadata": {
-        "id": "c09ca878-167e-49ca-97f0-247a43c9b472"
+        "id": "c09ca878-167e-49ca-97f0-247a43c9b472",
+        "outputId": "60b3e614-3c97-4541-f47b-85452423282e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the number of which the user wants to print the multiplication table: 5\n",
+            "The Multiplication Table of:  5\n",
+            "5 x 1 = 5\n",
+            "5 x 2 = 10\n",
+            "5 x 3 = 15\n",
+            "5 x 4 = 20\n",
+            "5 x 5 = 25\n",
+            "5 x 6 = 30\n",
+            "5 x 7 = 35\n",
+            "5 x 8 = 40\n",
+            "5 x 9 = 45\n",
+            "5 x 10 = 50\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to print the multiplication table of a given number using a for loop. (User input for the number)"
+        "# Write a Python program to print the multiplication table of a given number using a for loop. (User input for the number)\n",
+        "number = int(input (\"Enter the number of which the user wants to print the multiplication table: \"))\n",
+        "print (\"The Multiplication Table of: \", number)\n",
+        "for count in range(1, 11):\n",
+        "   print (number, 'x', count, '=', number * count)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "id": "b72118ab-e62d-4af9-bcec-e1cc6af31b25",
       "metadata": {
-        "id": "b72118ab-e62d-4af9-bcec-e1cc6af31b25"
+        "id": "b72118ab-e62d-4af9-bcec-e1cc6af31b25",
+        "outputId": "9044437d-02f4-4be3-c508-e9f84f126923",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a number: 8\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n",
+            "7\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to calculate the sum of all numbers from 1 to n using a while loop. (User input for n)"
+        "# Write a Python program to calculate the sum of all numbers from 1 to n using a while loop. (User input for n)\n",
+        "n = int(input(\"Enter a number: \"))\n",
+        "i = 1\n",
+        "while i<n:\n",
+        "    print(i)\n",
+        "    i = i + 1"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "id": "ae93621f-11a2-40b7-97bc-3002f03ac36a",
       "metadata": {
-        "id": "ae93621f-11a2-40b7-97bc-3002f03ac36a"
+        "id": "ae93621f-11a2-40b7-97bc-3002f03ac36a",
+        "outputId": "28b3c85e-b242-4ac1-9fb2-2f6c6c2bb599",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter any number: 4\n",
+            "Factorial is 24\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to calculate the factorial of a number using a while loop. (User input for the number)"
+        "# Write a Python program to calculate the factorial of a number using a while loop. (User input for the number)\n",
+        "n = int(input(\"Enter any number: \"))\n",
+        "f = 1\n",
+        "while n >= 1:\n",
+        "    f *= n\n",
+        "    n -= 1\n",
+        "print(\"Factorial is\", f)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "ArmE1X3eC4VD"
+      },
+      "id": "ArmE1X3eC4VD"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "sAu28nhyC4Kz"
+      },
+      "id": "sAu28nhyC4Kz"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "fWthPqILC5y3"
+      },
+      "id": "fWthPqILC5y3"
     },
     {
       "cell_type": "code",
@@ -721,7 +864,7 @@
       },
       "outputs": [],
       "source": [
-        "# Write a Python program to print the Fibonacci sequence up to n terms. (User input for n)"
+        "# Write a Python program to print the Fibonacci sequence up to n terms. (User input for n)\n"
       ]
     },
     {
