--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -654,7 +654,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "82d76cdf-efc6-45c6-ab09-9d1f17b3d857",
       "metadata": {
         "id": "82d76cdf-efc6-45c6-ab09-9d1f17b3d857",
@@ -689,7 +689,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "id": "d09e8994-e984-4c12-ab1e-1bfc6938a389",
       "metadata": {
         "id": "d09e8994-e984-4c12-ab1e-1bfc6938a389",
@@ -727,7 +727,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "id": "c09ca878-167e-49ca-97f0-247a43c9b472",
       "metadata": {
         "id": "c09ca878-167e-49ca-97f0-247a43c9b472",
@@ -766,7 +766,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "id": "b72118ab-e62d-4af9-bcec-e1cc6af31b25",
       "metadata": {
         "id": "b72118ab-e62d-4af9-bcec-e1cc6af31b25",
@@ -802,7 +802,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "id": "ae93621f-11a2-40b7-97bc-3002f03ac36a",
       "metadata": {
         "id": "ae93621f-11a2-40b7-97bc-3002f03ac36a",
@@ -832,99 +832,211 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "ArmE1X3eC4VD"
-      },
-      "id": "ArmE1X3eC4VD"
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "sAu28nhyC4Kz"
-      },
-      "id": "sAu28nhyC4Kz"
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "fWthPqILC5y3"
-      },
-      "id": "fWthPqILC5y3"
-    },
-    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "id": "68467ccc-d696-4ef1-84c4-164c9d87f755",
       "metadata": {
-        "id": "68467ccc-d696-4ef1-84c4-164c9d87f755"
+        "id": "68467ccc-d696-4ef1-84c4-164c9d87f755",
+        "outputId": "dc0a2512-9c32-486e-eb2d-12aaf56fb6f9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the number you want to print: 10\n",
+            "0 1 1 2 3 5 8 13 21 34 "
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to print the Fibonacci sequence up to n terms. (User input for n)\n"
+        "# Write a Python program to print the Fibonacci sequence up to n terms. (User input for n)\n",
+        "n = int(input (\"Enter the number you want to print: \"))\n",
+        "a = 0\n",
+        "b = 1\n",
+        "for i in range(0,n):\n",
+        "    print(a, end = \" \")\n",
+        "    c = a+b\n",
+        "    a = b\n",
+        "    b = c\n",
+        "\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "id": "5bebd1f3-2606-4102-aa55-01cb1650f632",
       "metadata": {
-        "id": "5bebd1f3-2606-4102-aa55-01cb1650f632"
+        "id": "5bebd1f3-2606-4102-aa55-01cb1650f632",
+        "outputId": "707c0da9-906b-4eff-8bc8-07de9dfc80ba",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "5\n",
+            "7\n",
+            "11\n",
+            "13\n",
+            "17\n",
+            "19\n",
+            "23\n",
+            "29\n",
+            "31\n",
+            "37\n",
+            "41\n",
+            "43\n",
+            "47\n",
+            "53\n",
+            "59\n",
+            "61\n",
+            "67\n",
+            "71\n",
+            "73\n",
+            "79\n",
+            "83\n",
+            "89\n",
+            "97\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to find all the prime numbers from 1 to 100."
+        "# Write a Python program to find all the prime numbers from 1 to 100.\n",
+        "num1 = 1\n",
+        "num2 = 100\n",
+        "for x in range(num1,num2):\n",
+        "    prime = True\n",
+        "    for i in range(2,x):\n",
+        "        if (x%i==0):\n",
+        "            prime = False\n",
+        "    if prime == True:\n",
+        "       print(x)\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "id": "0a3f894e-52ba-4c0b-9158-a70f31f4fd49",
       "metadata": {
-        "id": "0a3f894e-52ba-4c0b-9158-a70f31f4fd49"
+        "id": "0a3f894e-52ba-4c0b-9158-a70f31f4fd49",
+        "outputId": "82f9a074-49f7-44fc-9104-fa00d166c60e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The num has value: 1\n",
+            "The num has value: 2\n",
+            "The num has value: 3\n",
+            "The num has value: 4\n",
+            "The num has value: 5\n",
+            "The num has value: 6\n",
+            "The num has value: 7\n",
+            "Out of loop\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program that breaks out of a loop when a specific condition is met (e.g., when a number greater than 50 is found)."
+        "# Write a Python program that breaks out of a loop when a specific condition is met (e.g., when a number greater than 50 is found).\n",
+        "num = 0\n",
+        "for i in range(10):\n",
+        "    num += 1\n",
+        "    if num == 8:\n",
+        "        break\n",
+        "    print(\"The num has value:\", num)\n",
+        "print(\"Out of loop\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 38,
       "id": "499b91d0-1f1b-494f-af2b-8cc3a06d90ed",
       "metadata": {
         "id": "499b91d0-1f1b-494f-af2b-8cc3a06d90ed"
       },
       "outputs": [],
       "source": [
-        "# Write a Python program to skip even numbers while printing numbers from 1 to 20 using a for loop."
+        "# Write a Python program to skip even numbers while printing numbers from 1 to 20 using a for loop.\n",
+        "for x in range(1,20):\n",
+        "      if x % 3 == 0:\n",
+        "         continue\n",
+        "         print(x)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 34,
       "id": "f8ffed70-dfde-4262-a2fd-0d35d69b5fb1",
       "metadata": {
-        "id": "f8ffed70-dfde-4262-a2fd-0d35d69b5fb1"
+        "id": "f8ffed70-dfde-4262-a2fd-0d35d69b5fb1",
+        "outputId": "625e8625-ed35-4de9-b7ef-bf95db8d87d2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to count how many times a particular character appears in a string using a for loop. (User input for string and character)"
+        "# Write a Python program to count how many times a particular character appears in a string using a for loop. (User input for string and character)\n",
+        "s = \"banana\"\n",
+        "target = 'n'\n",
+        "count = 0\n",
+        "for c in s:\n",
+        "    if c == target:\n",
+        "        count += 1\n",
+        "\n",
+        "print(count)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 39,
       "id": "01f976ed-4dcd-4842-ae84-d3b5cc42d011",
       "metadata": {
-        "id": "01f976ed-4dcd-4842-ae84-d3b5cc42d011"
+        "id": "01f976ed-4dcd-4842-ae84-d3b5cc42d011",
+        "outputId": "1060aa7e-992f-428c-a99a-e6289ee4d093",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter Number: 11\n",
+            "2\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to calculate the sum of digits of a number. (User input for the number)"
+        "# Write a Python program to calculate the sum of digits of a number. (User input for the number)\n",
+        "num = input(\"Enter Number: \")\n",
+        "sum = 0\n",
+        "for i in num:\n",
+        "    sum = sum + int(i)\n",
+        "print(sum)\n"
       ]
     },
     {
